--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.elder.quizz.MainActivity"
+    tools:context="com.example.elder.quizz.feature.MainActivity"
     android:layout_margin="20dp">
 
     <android.support.v7.widget.CardView
@@ -13,15 +13,15 @@
         android:id="@+id/cardView">
 
         <TextView
+            android:id="@+id/hello"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.05"
-            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu ante vel arcu gravida iaculis in consectetur nisl." />
+            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu ante vel arcu gravida iaculis in consectetur nisl." />
 
     </android.support.v7.widget.CardView>
 
