--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,30 @@
     tools:context="com.example.elder.quizz.feature.MainActivity"
     android:layout_margin="20dp">
 
+
+
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cardView">
+        android:id="@+id/cardView"
+        app:cardCornerRadius="10dp"
+        >
 
         <TextView
-            android:id="@+id/hello"
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:layout_gravity="end"/>
+
+
+        <TextView
+            android:id="@+id/pergunta"
+            android:padding="40dp"
+            android:textSize="20sp"
+            android:textAlignment="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -23,44 +40,66 @@
             app:layout_constraintVertical_bias="0.05"
             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu ante vel arcu gravida iaculis in consectetur nisl." />
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="#088228"
+            android:layout_gravity="bottom"/>
+
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="0dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="0dp"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            >
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/alternativa1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Opção 1 " />
+                android:text="Opção 1 "
+                android:background="@drawable/bg_alternative"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp"
+                />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/alternativa2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Opção 2 " />
+                android:text="Opção 2 "
+                android:background="@drawable/bg_alternative"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp"/>
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/alternativa3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Opção 3 " />
+                android:text="Opção 3 "
+                android:background="@drawable/bg_alternative"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp"/>
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/alternativa4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Opção 4" />
+                android:text="Opção 4"
+                android:background="@drawable/bg_alternative"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:layout_marginBottom="10dp"/>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+
 
 </android.support.constraint.ConstraintLayout>
