--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,106 +4,138 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.elder.quizz.feature.MainActivity"
-    android:layout_margin="20dp">
+    tools:context="com.example.elder.quizz.feature.game.GameActivity"
+    >
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#088228"
+        android:gravity="bottom"
+        android:elevation="4dp"
+        android:textStyle="bold"
+        app:titleTextColor="#fff"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
 
-
-
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cardView"
-        app:cardCornerRadius="10dp"
-        >
+        android:orientation="vertical"
+        android:layout_margin="20dp"
 
-        <TextView
-            android:id="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textAlignment="center"
-            android:layout_gravity="end"/>
+            android:layout_height="match_parent"
+            app:cardCornerRadius="10dp">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="TextView"
+                android:textAlignment="center" />
 
 
-        <TextView
-            android:id="@+id/pergunta"
-            android:padding="40dp"
-            android:textSize="20sp"
-            android:textAlignment="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.05"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu ante vel arcu gravida iaculis in consectetur nisl." />
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:layout_gravity="bottom"
+                android:background="#088228" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="#088228"
-            android:layout_gravity="bottom"/>
+            <TextView
+                android:id="@+id/pergunta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="40dp"
+                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu ante vel arcu gravida iaculis in consectetur nisl."
+                android:textAlignment="center"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.05" />
 
-    </android.support.v7.widget.CardView>
-
-
+        </android.support.v7.widget.CardView>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            tools:layout_editor_absoluteX="0dp"
-            android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/cardView"
-            >
-
-            <Button
-                android:id="@+id/alternativa1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Opção 1 "
-                android:background="@drawable/bg_alternative"
-                android:textColor="#fff"
-                android:textStyle="bold"
-                android:layout_marginBottom="10dp"
-                android:onClick="onClick"
-                />
+                android:layout_marginTop="40dp"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@+id/cardView"
+                tools:layout_editor_absoluteX="0dp">
 
-            <Button
-                android:id="@+id/alternativa2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Opção 2 "
-                android:background="@drawable/bg_alternative"
-                android:textColor="#fff"
-                android:textStyle="bold"
-                android:layout_marginBottom="10dp"
-                android:onClick="onClick"/>
+                <Button
+                    android:id="@+id/alternativa1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/bg_alternative"
+                    android:onClick="checaResposta"
+                    android:text="Opção 1 "
+                    android:textColor="#fff"
+                    android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/alternativa3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Opção 3 "
-                android:background="@drawable/bg_alternative"
-                android:textColor="#fff"
-                android:textStyle="bold"
-                android:layout_marginBottom="10dp"
-                android:onClick="onClick"/>
+                <Button
+                    android:id="@+id/alternativa2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/bg_alternative"
+                    android:onClick="checaResposta"
+                    android:text="Opção 2 "
+                    android:textColor="#fff"
+                    android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/alternativa4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Opção 4"
-                android:background="@drawable/bg_alternative"
-                android:textColor="#fff"
-                android:textStyle="bold"
-                android:layout_marginBottom="10dp"
-                android:onClick="onClick"/>
-        </LinearLayout>
+                <Button
+                    android:id="@+id/alternativa3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/bg_alternative"
+                    android:onClick="checaResposta"
+                    android:text="Opção 3 "
+                    android:textColor="#fff"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/alternativa4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_alternative"
+                    android:text="Opção 4"
+                    android:textColor="#fff"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="10dp"
+                    android:onClick="checaResposta" />
+
+                <Button
+                    android:id="@+id/mudar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_alternative"
+                    android:text="Opção 4"
+                    android:textColor="#fff"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="10dp"
+                    android:onClick="home" />
+            </LinearLayout>
+
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
