--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -76,6 +76,26 @@
 
         </android.support.v7.widget.CardView>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
+
+
+            <Button
+                android:id="@+id/addQ"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Adicionar pergunta"
+                android:textColor="#fff"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/bg_alternative"
+                android:onClick="Add"
+                />
+        </LinearLayout>
+
     </LinearLayout>
 
 
