--- a/app/src/main/res/layout/perfil_fragment.xml
+++ b/app/src/main/res/layout/perfil_fragment.xml
@@ -13,8 +13,21 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="221dp" />
+        android:layout_marginTop="221dp"
+        android:id="@+id/textView2" />
 
+    <Button
+        android:id="@+id/button12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Sair"
+        android:textColor="#fff"
+        android:background="@drawable/bg_alternative"
+        android:onClick="Singout"
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp" />
 
 
 </RelativeLayout>
