--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -24,11 +24,13 @@
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="22dp"
-        android:progress="10"
+        android:progressDrawable="@drawable/style_progress"
+        android:maxHeight="10dp"
+        android:minHeight="10dp"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
-        tools:layout_editor_absoluteX="0dp" />
-
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,7 +50,9 @@
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:cardCornerRadius="10dp">
+            app:cardCornerRadius="10dp"
+            android:background="#000"
+            >
 
 
             <FrameLayout
@@ -61,7 +65,7 @@
                 android:id="@+id/pergunta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="40dp"
+                android:padding="20dp"
                 android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu ante vel arcu gravida iaculis in consectetur nisl."
                 android:textAlignment="center"
                 android:textSize="20sp"
@@ -70,6 +74,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.05" />
+
 
         </android.support.v7.widget.CardView>
 
@@ -124,7 +129,6 @@
                     android:textStyle="bold"
                     android:layout_marginBottom="10dp"
                     android:onClick="checaResposta" />
-
 
             </LinearLayout>
 
