--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    tools:context="com.example.elder.quizz.feature.game.ResultActivity">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +18,7 @@
             android:layout_height="150dp">
 
             <TextView
-                android:id="@+id/hometext"
+                android:id="@+id/resultado"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -23,7 +26,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_gravity="center_vertical"
                 android:gravity="center"
-                android:text="News"
+                android:text="Parbéns, você fez x pontos"
                 android:textSize="20dp" />
 
         </android.support.v7.widget.CardView>
@@ -43,14 +46,16 @@
                 android:layout_marginRight="10dp"
                 android:textColor="#fff"
                 android:background="@drawable/bg_alternative"
-                android:onClick="Jogar"/>
+                android:onClick="Jogar"
+
+                />
 
             <Button
                 android:id="@+id/button11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Convidar"
+                android:text="Compartilhar"
                 android:textColor="#fff"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/bg_alternative"
@@ -60,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
-           >
+            >
 
             <TextView
                 android:layout_width="match_parent"
@@ -81,21 +86,9 @@
             android:orientation="horizontal"
             android:layout_marginTop="20dp">
 
-
-            <Button
-                android:id="@+id/addQ"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Adicionar pergunta"
-                android:textColor="#fff"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/bg_alternative"
-                android:onClick="Add"
-                />
         </LinearLayout>
 
     </LinearLayout>
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
