--- a/app/src/main/res/layout/question_list.xml
+++ b/app/src/main/res/layout/question_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/alternative">
@@ -17,6 +18,14 @@
         android:id="@+id/textViewYear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@color/bg_register"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"/>
 
 
 </LinearLayout>
