--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -9,20 +9,22 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_width="368dp"
+        android:layout_height="56dp"
         android:background="#088228"
         android:gravity="bottom"
         android:elevation="4dp"
         android:textStyle="bold"
         app:titleTextColor="#fff"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp" />
 
     <ProgressBar
         android:id="@+id/determinateBar"
         style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="368dp"
         android:layout_height="22dp"
         android:progressDrawable="@drawable/style_progress"
         android:maxHeight="10dp"
@@ -30,29 +32,28 @@
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        tools:layout_editor_absoluteX="8dp" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_margin="20dp"
 
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="8dp"
         app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/determinateBar"
-        android:id="@+id/linearLayout2">
+        tools:layout_editor_absoluteX="8dp"
+        android:layout_marginTop="20dp">
 
         <android.support.v7.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:cardCornerRadius="10dp"
             android:background="#000"
-            >
+            app:cardCornerRadius="10dp">
 
 
             <FrameLayout
@@ -66,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
-                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu ante vel arcu gravida iaculis in consectetur nisl."
+                android:text=""
                 android:textAlignment="center"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -79,58 +80,58 @@
         </android.support.v7.widget.CardView>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="40dp"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            tools:layout_editor_absoluteX="0dp">
+
+            <Button
+                android:id="@+id/alternativa1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@+id/cardView"
-                tools:layout_editor_absoluteX="0dp">
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/bg_alternative"
+                android:onClick="checaResposta"
+                android:text="A"
+                android:textColor="#fff"
+                android:textStyle="bold" />
 
-                <Button
-                    android:id="@+id/alternativa1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/bg_alternative"
-                    android:onClick="checaResposta"
-                    android:text="Opção 1 "
-                    android:textColor="#fff"
-                    android:textStyle="bold" />
+            <Button
+                android:id="@+id/alternativa2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/bg_alternative"
+                android:onClick="checaResposta"
+                android:text="B"
+                android:textColor="#fff"
+                android:textStyle="bold" />
 
-                <Button
-                    android:id="@+id/alternativa2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/bg_alternative"
-                    android:onClick="checaResposta"
-                    android:text="Opção 2 "
-                    android:textColor="#fff"
-                    android:textStyle="bold" />
+            <Button
+                android:id="@+id/alternativa3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/bg_alternative"
+                android:onClick="checaResposta"
+                android:text="C"
+                android:textColor="#fff"
+                android:textStyle="bold" />
 
-                <Button
-                    android:id="@+id/alternativa3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/bg_alternative"
-                    android:onClick="checaResposta"
-                    android:text="Opção 3 "
-                    android:textColor="#fff"
-                    android:textStyle="bold" />
+            <Button
+                android:id="@+id/alternativa4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/bg_alternative"
+                android:onClick="checaResposta"
+                android:text="D"
+                android:textColor="#fff"
+                android:textStyle="bold" />
 
-                <Button
-                    android:id="@+id/alternativa4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_alternative"
-                    android:text="Opção 4"
-                    android:textColor="#fff"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="10dp"
-                    android:onClick="checaResposta" />
-
-            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
